--- a/Exam/index.html
+++ b/Exam/index.html
@@ -21,9 +21,12 @@
         <span class="btn" id="green" onclick="changeBackground('#00FF00')"></span>
         <span class="btn" id="black" onclick="changeBackground('#000000')"></span>
     </div>
-    <div class="container_1">
-
+    <hr>
+    <div class="main">
+        <div class="movie" id="addImg">
+        </div>
     </div>
+
 
     <script src="./main.js"></script>
 </body>
